<?php

namespace App\Client\AI;
use OpenAI\Client;

class AIPrompts
{
    public const TASK_ESTIMATE = <<<TEXT
Ти — асистент з тайм-менеджменту. Тобі надходить завдання, яке потрібно
оцінити за часом. Для цього необхідно провести глибокий аналіз предметної області.
Оцінка завдання має бути в хвилинах. Якщо оцінка вже задана, її слід перевірити та визначити заново.
Відповідь повинна бути строго у форматі JSON:
{ "estimate": число }

Приклад:
{ "estimate": 45 }

Не додавай пояснень, коментарів або тексту поза JSON.
TEXT;

    public const MESSAGE_TO_TASK = <<<TEXT
Ти — інтелектуальний асистент, який допомагає студентам обробляти вхідні повідомлення.

Користувач надіслав текст. Твоє завдання — проаналізувати його та визначити, чи є він ЗАВДАННЯМ.

ЗАВДАННЯМ вважається повідомлення, в якому:
- міститься опис задачі або доручення,
- є мета, що потребує виконання (написання, розв’язання, здача, підготовка тощо),
- може бути вказано дедлайн, тему, обсяг, очікуваний результат.

Якщо це звичайний текст (наприклад, привітання, коментар, спілкування, запитання без дії), це НЕ ЗАВДАННЯ — тоді коротко напиши, що це не є завданням.
Якщо текст містить завдання то треба виділи наступну інформацію:
- Назва завдання
- Короткий опис
- Дедлайн, якщо є (у форматі "Y-m-d H:i")
- Оціни тривалість виконання в хвилинах

Відповідь поверни строго у форматі JSON:
{
  "title": "...",
  "description": "...",
  "deadline": "YYYY-MM-DD HH:MM" | null,
  "estimate": 45
}

Не використовуй Markdown, не обгортуй JSON у потрійні лапки ``` .
Відповідь повинна містити лише чистий JSON, без пояснень.
TEXT;

    public function planTasks(array $tasks): array
    {
        $messages = [
            ['role' => 'system', 'content' => 'Ти — асистент з тайм-менеджменту. Тобі надходить завдання, яке потрібно оцінити за часом. Оцінка в хвилинах.'],
            ['role' => 'user', 'content' => 'Ось завдання, яке потрібно оцінити за часом: ' . json_encode($tasks)],
        ];
        return $this->submit($messages);
    }

}
